# fmri-fm-eval

./: .gitignore  pyproject.toml
ADHD200/scripts/: preprocess.sh
PPMI/: README.md
PPMI/scripts/: dcm2bids_config.json  run_dcm2bids.sh
datasets/: README.md
datasets/AABC/metadata/: aabc_partition_split.json  aabc_subject_batch_splits.json
datasets/AABC/scripts/: make_aabc_eval.py  make_aabc_eval.sh  make_aabc_metadata.py  make_aabc_pretrain.py  make_aabc_subject_batch_splits.py  make_aabc_targets.py
datasets/ABIDE/: README.md
datasets/ABIDE/metadata/: ABIDE_BIDS_index.csv  ABIDE_curated.csv  ABIDE_curated_paths.txt  ABIDE_subjects.txt
datasets/ABIDE/scripts/: abide_curation.ipynb  copy_files_to_s3.sh  find_subjects.sh  fsaverage_copy.sh  make_abide_dataset.py  preprocess.sh  run_preprocess.sh
datasets/ADNI/scripts/: make_adni_dataset.py  make_adni_dataset.sh
datasets/HCP-YA/: README.md
datasets/HCP-YA/metadata/: hcpya_metadata.parquet  hcpya_pheno_targets.csv
datasets/HCP-YA/scripts/: make_hcpya_all_wds.py  make_hcpya_all_wds.sh  make_hcpya_arrow.sh  make_hcpya_clips_arrow.py  make_hcpya_rest1lr_arrow.py  make_hcpya_targets.py  make_hcpya_task21_arrow.py
datasets/NSD/: README.md
datasets/NSD/metadata/: nsd_include_coco_categories.json  nsd_include_trial_ids.npy  nsd_run_metadata.parquet  nsd_trial_metadata.parquet
datasets/NSD/scripts/: extract_nsd_clip_embeds.py  make_nsd_cococlip_arrow.py  make_nsd_metadata.py  nsd_curation.ipynb  resample_nsd.py
datasets/PPMI/: QC.md  README.md
datasets/PPMI/metadata/: Epworth_Sleepiness_Scale_26Nov2025.csv  Geriatric_Depression_Scale__Short_Version__26Nov2025.csv  MDS-UPDRS_Part_I_26Nov2025.csv  MDS-UPDRS_Part_I_Patient_Questionnaire_26Nov2025.csv  Montreal_Cognitive_Assessment__MoCA__26Nov2025.csv  PPMI_500_Curated.csv  PPMI_500_Split_Reference.csv  PPMI_BIDS_complete.csv  PPMI_BIDS_complete_paths.txt  PPMI_BIDS_complete_sub_ses.txt  PPMI_BIDS_complete_subs.txt  PPMI_BIDS_index.csv  PPMI_Hybrid_Cases.csv  PPMI_T1+fMRI_gt200TR_valid_subjects.csv  PPMI_curated.csv  PPMI_curated_paths.txt  Participant_Status_26Nov2025.csv  REM_Sleep_Behavior_Disorder_Questionnaire_26Nov2025.csv
datasets/PPMI/notebooks/: ppmi_bids_filter.ipynb  ppmi_bids_subject_list.ipynb  ppmi_curation.ipynb  ppmi_filter_sessions_runs.ipynb  submit_batch.ipynb
datasets/PPMI/scripts/: curate_ppmi.py  index_ppmi_bids.py  link_ppmi_bids_complete.py  make_ppmi_dataset.py  preprocess.sh  preprocess_batch.sh  run_dcm2bids.sh  subset_500.py  unzip_ppmi.sh
src/fmri_fm_eval/: classifiers.py  heads.py  main_logistic.py  main_probe.py  nisc.py  readers.py  utils.py
src/fmri_fm_eval/config/: default_logistic.yaml  default_probe.yaml
src/fmri_fm_eval/datasets/: aabc.py  abide.py  base.py  hcpya.py  nsd.py  registry.py
src/fmri_fm_eval/models/: base.py  brain_semantoks.py  brainharmonix_f.py  brainjepa.py  brainlm.py  connectome.py  identity.py  registry.py  swift.py  template.py  test_models.py
(+16 files in other folders)
