[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "fmri-fm-eval"
dynamic = ["version"]
description = "MedARC fMRI foundation model evals"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cloudpathlib[s3]",
    "datasets",
    "einops",
    "gdown",
    "huggingface_hub",
    "ipython",
    "jupyter",
    "matplotlib",
    "neuromaps",
    "nibabel",
    "nsdcode",
    "numpy",
    "omegaconf",
    "pandas",
    "pre-commit",
    "pycortex",
    "pytest",
    "python-dotenv",
    "s3fs",
    "scikit-learn",
    "seaborn",
    "tabulate",
    "templateflow",
    "torch",
    "tqdm",
    "wandb",
    "webdataset",
    "yaspy",
]

[project.optional-dependencies]

brain-jepa = [
    "brain-jepa",
]

swift = [
    "swiftfmri",
]

brainlm = [
    "brainlm",
]

brainharmonix = [
    "brainharmonix",
]

[tool.setuptools_scm]
version_file = "src/fmri_fm_eval/version.py"

[tool.uv.sources]
nsdcode = { git = "https://github.com/cvnlab/nsdcode.git", rev = "bfd36a503cc90a3eb3ebfd69b269403f7e186924" }
yaspy = { git = "https://github.com/childmindresearch/yaspy.git" }
brain-jepa = { git = "https://github.com/MedARC-AI/Brain-JEPA.git", rev = "c43f8a647b948000ec1a92c4ea6f5efb4efc27f1" }
swiftfmri = { git = "https://github.com/MedARC-AI/SwiFT.git", rev = "934e27a892921756109feb577851615e4e8faeb6" }
brainlm = { git = "https://github.com/MedARC-AI/BrainLM.git", rev = "e287e0fa0f2dda61b448614d92e9041cb38fa128" }
brainharmonix = { git = "https://github.com/MedARC-AI/Brain-Harmony.git", rev = "5398f8f5540222973cf82d13ac1eb4c4b38af636" }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["F722"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
